<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">WeatherApp</string>
    <string name="menu_settings">Settings</string>
    <string name="no_weather_inf">No Weather Info Available</string>
    <string name="no_location">No Info For This Location</string>
    <string name="server_error">Server Error</string>
    <string name="location_services">Location Services</string>
    <string name="activate_location_services">This app uses location services. Please, activate it in the Settings app.</string>
    <string name="ok">OK</string>
    <string name="unit_fahrenheit">°F</string>
    <string name="unit_celcius">°C</string>
    <string name="unit_kph">Kph</string>
    <string name="unit_mph">Mph</string>
    <string name="units">Units</string>
    <string name="units_summary">Select your preferred unit for temperature and windspeed.</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="network_services">Network Services</string>
    <string name="check_network_services">Error retreaving data from server. Please, review your network configuration.</string>
    <string name="parsing_error">Data parsing error</string>
    <string name="parsing_error_explanation">Data retrieved from server couldn\'t be properly processed. Please, close this app and try again later.</string>
    <string name="weekday_sun">Sun</string>
    <string name="weekday_mon">Mon</string>
    <string name="weekday_tue">Tue</string>
    <string name="weekday_wed">Wed</string>
    <string name="weekday_thu">Thu</string>
    <string name="weekday_fri">Fri</string>
    <string name="weekday_sat">Sat</string>
    <string name="condition_drizzle">Drizzle</string>
    <string name="condition_light_drizzle">Light Drizzle</string>
    <string name="condition_heavy_drizzle">Heavy Drizzle</string>
    <string name="condition_rain">Rain</string>
    <string name="condition_light_rain">Light Rain</string>
    <string name="condition_heavy_rain">Heavy Rain</string>
    <string name="condition_snow">Snow</string>
    <string name="condition_light_snow">Light Snow</string>
    <string name="condition_heavy_snow">Heavy Snow</string>
    <string name="condition_snow_grains">Snow Grains</string>
    <string name="condition_light_snow_grains">Light Snow Grains</string>
    <string name="condition_heavy_snow_grains">Heavy Snow Grains</string>
    <string name="condition_ice_crystals">Ice Crystals</string>
    <string name="condition_light_ice_crystals">Light Ice Crystals</string>
    <string name="condition_heavy_ice_crystals">Heavy Ice Crystals</string>
    <string name="condition_ice_pellets">Ice Pellets</string>
    <string name="condition_light_ice_pellets">Light Ice Pellets</string>
    <string name="condition_heavy_ice_pellets">Heavy Ice Pellets</string>
    <string name="condition_hail">Hail</string>
    <string name="condition_light_hail">Light Hail</string>
    <string name="condition_heavy_hail">Heavy Hail</string>
    <string name="condition_mist">Mist</string>
    <string name="condition_light_mist">Light Mist</string>
    <string name="condition_heavy_mist">Heavy Mist</string>
    <string name="condition_fog">Fog</string>
    <string name="condition_light_fog">Light Fog</string>
    <string name="condition_heavy_fog">Heavy Fog</string>
    <string name="condition_fog_patches">Fog Patches</string>
    <string name="condition_light_fog_patches">Light Fog Patches</string>
    <string name="condition_heavy_fog_patches">Heavy Fog Patches</string>
    <string name="condition_smoke">Smoke</string>
    <string name="condition_light_smoke">Light Smoke</string>
    <string name="condition_heavy_smoke">Heavy Smoke</string>
    <string name="condition_volcanic_ash">Volcanic Ash</string>
    <string name="condition_light_volcanic_ash">Light Volcanic Ash</string>
    <string name="condition_heavy_volcanic_ash">Heavy Volcanic Ash</string>
    <string name="condition_widespread_dust">Widespread Dust</string>
    <string name="condition_light_widespread_dust">Light Widespread Dust</string>
    <string name="condition_heavy_widespread_dust">Heavy Widespread Dust</string>
    <string name="condition_sand">Sand</string>
    <string name="condition_light_sand">Light Sand</string>
    <string name="condition_heavy_sand">Heavy Sand</string>
    <string name="condition_haze">Haze</string>
    <string name="condition_light_haze">Light Haze</string>
    <string name="condition_heavy_haze">Heavy Haze</string>
    <string name="condition_spray">Spray</string>
    <string name="condition_light_spray">Light Spray</string>
    <string name="condition_heavy_spray">Heavy Spray</string>
    <string name="condition_dust_whirls">Dust Whirls</string>
    <string name="condition_light_dust_whirls">Light Dust Whirls</string>
    <string name="condition_heavy_dust_whirls">Heavy Dust Whirls</string>
    <string name="condition_sandstorm">Sandstorm</string>
    <string name="condition_light_sandstorm">Light Sandstorm</string>
    <string name="condition_heavy_sandstorm">Heavy Sandstorm</string>
    <string name="condition_low_drifting_snow">Low Drifting Snow</string>
    <string name="condition_light_low_drifting_snow">Light Low Drifting Snow</string>
    <string name="condition_heavy_low_drifting_snow">Heavy Low Drifting Snow</string>
    <string name="condition_low_drifting_widespread_dust">Low Drifting Widespread Dust</string>
    <string name="condition_light_low_drifting_widespread_dust">Light Low Drifting Widespread Dust</string>
    <string name="condition_heavy_low_drifting_widespread_dust">Heavy Low Drifting Widespread Dust</string>
    <string name="condition_low_drifting_sand">Low Drifting Sand</string>
    <string name="condition_light_low_drifting_sand">Light Low Drifting Sand</string>
    <string name="condition_heavy_low_drifting_sand">Heavy Low Drifting Sand</string>
    <string name="condition_blowing_snow">Blowing Snow</string>
    <string name="condition_light_blowing_snow">Light Blowing Snow</string>
    <string name="condition_heavy_blowing_snow">Heavy Blowing Snow</string>
    <string name="condition_blowing_widespread_dust">Blowing Widespread Dust</string>
    <string name="condition_light_blowing_widespread_dust">Light Blowing Widespread Dust</string>
    <string name="condition_heavy_blowing_widespread_dust">Heavy Blowing Widespread Dust</string>
    <string name="condition_blowing_sand">Blowing Sand</string>
    <string name="condition_light_blowing_sand">Light Blowing Sand</string>
    <string name="condition_heavy_blowing_sand">Heavy Blowing Sand</string>
    <string name="condition_rain_mist">Rain Mist</string>
    <string name="condition_light_rain_mist">Light Rain Mist</string>
    <string name="condition_heavy_rain_mist">Heavy Rain Mist</string>
    <string name="condition_rain_showers">Rain Showers</string>
    <string name="condition_light_rain_showers">Light Rain Showers</string>
    <string name="condition_heavy_rain_showers">Heavy Rain Showers</string>
    <string name="condition_snow_showers">Snow Showers</string>
    <string name="condition_light_snow_showers">Light Snow Showers</string>
    <string name="condition_heavy_snow_showers">Heavy Snow Showers</string>
    <string name="condition_snow_blowing_snow_mist">Snow Blowing Snow Mist</string>
    <string name="condition_light_snow_blowing_snow_mist">Light Snow Blowing Snow Mist</string>
    <string name="condition_heavy_snow_blowing_snow_mist">Heavy Snow Blowing Snow Mist</string>
    <string name="condition_ice_pellet_showers">Ice Pellet Showers</string>
    <string name="condition_light_ice_pellet_showers">Light Ice Pellet Showers</string>
    <string name="condition_heavy_ice_pellet_showers">Heavy Ice Pellet Showers</string>
    <string name="condition_hail_showers">Hail Showers</string>
    <string name="condition_light_hail_showers">Light Hail Showers</string>
    <string name="condition_heavy_hail_showers">Heavy Hail Showers</string>
    <string name="condition_small_hail_showers">Small Hail Showers</string>
    <string name="condition_light_small_hail_showers">Light Small Hail Showers</string>
    <string name="condition_heavy_small_hail_showers">Heavy Small Hail Showers</string>
    <string name="condition_thunderstorm">Thunderstorm</string>
    <string name="condition_light_thunderstorm">Light Thunderstorm</string>
    <string name="condition_heavy_thunderstorm">Heavy Thunderstorm</string>
    <string name="condition_thunderstorms_and_rain">Thunderstorms and Rain</string>
    <string name="condition_light_thunderstorms_and_rain">Light Thunderstorms and Rain</string>
    <string name="condition_heavy_thunderstorms_and_rain">Heavy Thunderstorms and Rain</string>
    <string name="condition_thunderstorms_and_snow">Thunderstorms and Snow</string>
    <string name="condition_light_thunderstorms_and_snow">Light Thunderstorms and Snow</string>
    <string name="condition_heavy_thunderstorms_and_snow">Heavy Thunderstorms and Snow</string>
    <string name="condition_thunderstorms_and_ice_pellets">Thunderstorms and Ice Pellets</string>
    <string name="condition_light_thunderstorms_and_ice_pellets">Light Thunderstorms and Ice Pellets</string>
    <string name="condition_heavy_thunderstorms_and_ice_pellets">Heavy Thunderstorms and Ice Pellets</string>
    <string name="condition_thunderstorms_with_hail">Thunderstorms with Hail</string>
    <string name="condition_light_thunderstorms_with_hail">Light Thunderstorms with Hail</string>
    <string name="condition_heavy_thunderstorms_with_hail">Heavy Thunderstorms with Hail</string>
    <string name="condition_thunderstorms_with_small_hail">Thunderstorms with Small Hail</string>
    <string name="condition_light_thunderstorms_with_small_hail">Light Thunderstorms with Small Hail</string>
    <string name="condition_heavy_thunderstorms_with_small_hail">Heavy Thunderstorms with Small Hail</string>
    <string name="condition_freezing_drizzle">Freezing Drizzle</string>
    <string name="condition_light_freezing_drizzle">Light Freezing Drizzle</string>
    <string name="condition_heavy_freezing_drizzle">Heavy Freezing Drizzle</string>
    <string name="condition_freezing_rain">Freezing Rain</string>
    <string name="condition_light_freezing_rain">Light Freezing Rain</string>
    <string name="condition_heavy_freezing_rain">Heavy Freezing Rain</string>
    <string name="condition_freezing_fog">Freezing Fog</string>
    <string name="condition_light_freezing_fog">Light Freezing Fog</string>
    <string name="condition_heavy_freezing_fog">Heavy Freezing Fog</string>
    <string name="condition_patches_of_fog">Patches of Fog</string>
    <string name="condition_shallow_fog">Shallow Fog</string>
    <string name="condition_partial_fog">Partial Fog</string>
    <string name="condition_overcast">Overcast</string>
    <string name="condition_clear">Clear</string>
    <string name="condition_partly_cloudy">Partly Cloudy</string>
    <string name="condition_mostly_cloudy">Mostly Cloudy</string>
    <string name="condition_scattered_clouds">Scattered Clouds</string>
    <string name="condition_small_hail">Small Hail</string>
    <string name="condition_squalls">Squalls</string>
    <string name="condition_funnel_cloud">Funnel Cloud</string>
    <string name="condition_unknown_precipitation">Unknown Precipitation</string>
    <string name="condition_unknown">Unknown</string>
    <string name="msg_loading">Loading</string>
    <string name="msg_waiting_location">Waiting for location</string>
    <string name="msg_downloading">Downloading weather info</string>
    <string name="timeout_error">Location</string>
    <string name="timeout_error_explanation">Your location could not be determined</string>
    <string name="menu_refresh">Refresh</string>
    <string name="compass">Compass</string>
    <string name="sensors">Sensors</string>
    <string name="on">On</string>
    <string name="off">Off</string>
</resources>